--add blurbs and fix spacing

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ canvas {
 
 :root {
   --dark-bg: rgba(15, 15, 15, 0.7);
-  --spacing: 35vh;
+  --spacing: 28vh;
   font-family: 'Comfortaa', cursive;
   /* font-family: 'Contrail One', cursive; */
   /* font-family: 'Koulen', cursive; */
